src/objects/Blog_Post__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Blog_Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Posted__c</fullName>
        <label>Date Posted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Large_Image_Id__c</fullName>
        <label>Large Image Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium_Image_id__c</fullName>
        <label>Medium Image id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Small_Image_Id__c</fullName>
        <label>Small Image Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Blog Post</label>
    <nameField>
        <label>Blog Post Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blog Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>